--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -78,6 +78,10 @@
         android:id="@+id/conversationsFragment2"
         android:name="postpc.studypartner2.chat.ConversationsFragment"
         android:label="fragment_conversations"
-        tools:layout="@layout/fragment_conversations" />
+        tools:layout="@layout/fragment_conversations" >
+        <action
+            android:id="@+id/action_conversationsFragment2_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
 
 </navigation>
