--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,137 +1,123 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:layout_gravity="center">
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent"
 
-    <TextView
-        android:layout_marginTop="150dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose sign in method"
-        android:layout_gravity="center">
-    </TextView>
-    <ImageView
-        android:layout_marginTop="50dp"
-        android:id="@+id/googleLoginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="90dp"
-        android:layout_marginBottom="10dp"
-        tools:src="@drawable/google_logo" />
-<!--    <ImageView-->
-<!--        android:id="@+id/googleLoginBtn"-->
-<!--        android:layout_width="150dp"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        tools:src="@drawable/logo" />-->
+    android:layout_width="match_parent">
 
-    <ImageView
-        android:id="@+id/emailLoginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/email_logo" />
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="20dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="@drawable/rounded_rectangle3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:orientation="vertical" android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:gravity="center"-->
-<!--    android:background="#FFF"-->
-<!--    >-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:text="StudyWithMe"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="sans-serif-light"
+            android:textSize="50sp"/>
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/constraintLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginHorizontal="90dp"-->
-<!--        android:layout_marginBottom="128dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:padding="15dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_rectangle">
+            <EditText
+                android:id="@+id/login_email_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="start"
+                android:hint="Email"
+                android:fontFamily="sans-serif-light"
+                android:singleLine="true"
+                android:textColor="@color/grey_text"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:padding="15dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_rectangle">
+            <EditText
+                android:id="@+id/login_email_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="20dp"
+                android:background="@android:color/transparent"
+                android:gravity="start"
+                android:hint="Password"
+                android:fontFamily="sans-serif-light"
+                android:singleLine="true"
+                android:textColor="@color/grey_text"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView"-->
-<!--            android:layout_width="150dp"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            tools:src="@drawable/logo" />-->
+            <Button
+                android:id="@+id/login_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/accent_filled_rounded_rectangle"
+                android:hint="Sign In"
+                android:textColorHint="@color/white"
+                android:singleLine="true"
+                android:textColor="@color/grey_text"
+                android:textSize="18sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/grey_text"
+            android:textSize="12sp"
+            android:text="or sign in with"
+            android:layout_marginBottom="10dp"/>
 
-<!--&lt;!&ndash;        <EditText&ndash;&gt;-->
-<!--&lt;!&ndash;            android:id="@+id/editTextEmail"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:hint="E-mail"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:inputType="textEmailAddress"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/rounded_rectangle">
 
-<!--&lt;!&ndash;        <EditText&ndash;&gt;-->
-<!--&lt;!&ndash;            android:id="@+id/editTextPassword"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:ems="10"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:hint="Password"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:inputType="textPassword"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;-->
+            <ImageButton
+                android:id="@+id/login_google_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_google_logo"
+                android:background="@android:color/transparent"
+                android:padding="3dp"
+                />
+        </LinearLayout>
 
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--&lt;!&ndash;    <LinearLayout&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:layout_marginTop="10dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:gravity="center"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:orientation="horizontal"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:paddingHorizontal="50dp"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">&ndash;&gt;-->
-
-<!--&lt;!&ndash;        <Button&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_margin="10dp"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:id="@+id/SignInBtn"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-
-<!--&lt;!&ndash;            android:layout_alignParentBottom="true"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:background="@drawable/rounded_rectangle"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:text="Sign in"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:textAllCaps="false"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:textColor="@color/dark_grey"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintEnd_toStartOf="@+id/registerBtn"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-
-<!--&lt;!&ndash;        <Button&ndash;&gt;-->
-<!--&lt;!&ndash;            android:id="@+id/registerBtn"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_toEndOf="@+id/SignInBtn"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:background="@drawable/rounded_rectangle"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:text="Register"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:textAllCaps="false"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:textColor="@color/dark_grey"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-<!--&lt;!&ndash;    </LinearLayout>&ndash;&gt;-->
+    </LinearLayout>
 
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
