--- a/app/src/main/res/layout/temp.xml
+++ b/app/src/main/res/layout/temp.xml
@@ -1,88 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Search.results.SearchFragment">
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:layout_gravity="center">
 
-    <!-- Results -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        tools:listitem="@layout/item_partner"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        android:visibility="gone"/>
-
-    <ProgressBar
-        android:id="@+id/progressBarSearch"
-        style="?android:attr/progressBarStyle"
+    <TextView
+        android:layout_marginTop="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="110dp"
-        android:visibility="visible"/>
-    <!-- -->
-
-    <!-- search filters -->
-    <LinearLayout
-        android:id="@+id/search_filters_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <!-- course number box -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/search_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_rectangle"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="20dp">
-
-            <ImageButton
-                android:id="@+id/button_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_bubble"
-                android:layout_gravity="center"
-                android:layout_marginStart="5dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-            <EditText
-                android:id="@+id/edit_text_search_course"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/grey_text"
-                android:background="@android:color/transparent"
-                android:hint="Course Number"
-                android:textSize="18sp"
-                android:gravity="start"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="5dp"
-                android:singleLine="true"
-                android:inputType="number"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/button_search"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <include layout="@layout/snippet_profile_preferences"/>
-
-    </LinearLayout>
-
+        android:text="Choose sign in method"
+        android:layout_gravity="center">
+    </TextView>
+    <ImageView
+        android:layout_marginTop="50dp"
+        android:id="@+id/googleLoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_marginBottom="10dp"
+        tools:src="@drawable/google_logo" />
     <!--    <ImageView-->
-    <!--        android:id="@+id/imageView"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:src="@drawable/ic_search"-->
-    <!--        col/>-->
+    <!--        android:id="@+id/googleLoginBtn"-->
+    <!--        android:layout_width="150dp"-->
+    <!--        android:layout_height="150dp"-->
+    <!--        android:layout_marginBottom="10dp"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        tools:src="@drawable/logo" />-->
 
-
-</FrameLayout>
+    <ImageView
+        android:id="@+id/emailLoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/email_logo" />
+</LinearLayout>
