--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
                 android:fontFamily="sans-serif-light"
                 android:gravity="start"
                 android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
                 android:textSize="18sp"
