--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -69,11 +69,12 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Name"
+
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:layout_marginHorizontal="10dp"
                         android:textSize="22sp"
-                        android:minWidth="30dp"
+                        android:minWidth="60dp"
                         android:visibility="visible" />
 
                     <ImageView
@@ -125,25 +126,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    android:orientation="horizontal">
                     <EditText
                         android:id="@+id/profile_desc_edit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Description"
+
                         android:textAlignment="center"
                         android:textColor="@color/grey_text"
-                        android:textSize="16sp"
-                        android:minWidth="30dp"
                         android:layout_marginHorizontal="10dp"
+                        android:textSize="16sp"
+                        android:minWidth="60dp"
                         android:visibility="visible" />
+
                     <ImageView
                         android:id="@+id/profile_icon_edit_desc_ok"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_ok" />
                 </LinearLayout>
+
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/profile_desc_edit_layout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center"-->
+<!--                    android:visibility="gone">-->
+<!--                    <EditText-->
+<!--                        android:id="@+id/profile_desc_edit"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:fontFamily="sans-serif-light"-->
+<!--                        android:text="Description"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textColor="@color/grey_text"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:minWidth="60dp"-->
+<!--                        android:layout_marginHorizontal="10dp"-->
+<!--                        android:visibility="visible" />-->
+<!--                    <ImageView-->
+<!--                        android:id="@+id/profile_icon_edit_desc_ok"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:src="@drawable/ic_ok" />-->
+<!--                </LinearLayout>-->
             </LinearLayout>
 
 
